@@ -28,6 +28,16 @@ eccomp <- function(ft, xlim, ylim, main, xlab, ylab, do.points=TRUE,
   if (missing(ylab)) ylab <- "G(x)"
   if (missing(main)) main <- paste("Emp. and theo. exposure curve(s)")
   
+  # check legend parameters if added
+  if(missing(legendtext)) 
+  {
+    legendtext <- sapply(ft, function(x) x$distname)
+    if(length(legendtext) != length(unique(legendtext)))
+      legendtext <- paste(legendtext, sapply(ft, function(x) toupper(x$method)), sep="-")
+    if(length(legendtext) != length(unique(legendtext)))
+      legendtext <- paste(legendtext, 1:nft, sep="-")
+  }
+  
   mydata <- ft[[1]]$data
   distname <- ft[[1]]$distname
   n <- length(mydata)
@@ -76,8 +86,6 @@ eccomp <- function(ft, xlim, ylim, main, xlab, ylab, do.points=TRUE,
   
   if(addlegend)
   {
-    if(missing(legendtext)) 
-      legendtext <- paste("fit", 1:nft)
     legend(x=xlegend, y=ylegend, bty="n", legend=legendtext, 
            lty=fitlty, col=fitcol,...)
   }
