@@ -1,6 +1,8 @@
 -Version 0.8.8.4
 Bumped requirement of Rcpp and R
 Added support for the unwind api of Rcpp https://www.r-bloggers.com/boost-the-speed-of-r-calls-from-rcpp/
+Update automatic naming of legend in eccomp() (similar update for fitdistrplus)
+Bug fix: Update testing parameter value of mbbefd(a,b) for inconsistent value
 -Version 0.8-8.3
 Remove unused arguments
 Update starting values to meet requirements of next fitdistrplus version
